feat: add KV public read cache
